# mcp-proxy

./: .dockerignore  .gitignore  CLAUDE.md  README.md  modal_app.py  pyproject.toml  registry.json
demo/: Dockerfile.gateway  Dockerfile.ui  TEST-AGENTGATEWAY.md  agentgateway-demo.yaml  docker-compose.override.yml  docker-compose.yml  run-demo.sh  test_overrides.sh  test_registry.json
demo/mcp-snapshots/: README.md  SURVEY-SUMMARY.md  call_tools.py  cloudflare-browser-examples.json  cloudflare-browser.json  cloudflare-docs.json  cloudflare-radar-examples.json  cloudflare-radar.json  extract_tools.py  mcp-server-fetch-examples.json  mcp-server-fetch.json  memory-projection-demo.json  memory-projection-expected.md  output-pattern-analysis.md  server-github.json  (+14 more)
demo/ui/: README.md  backend.py  components.py  main.py  oauth.py  pyproject.toml  requirements.txt  scenarios.py  style.css
docs/: gateway-infrastructure.md  json-in-text-extraction.md  manual-testing.md  motivation.md  phase2a-sidecar-proxy-plan.md  registry-schema.md  sidecar.md  tool-composition-exploration.md  tool-hints-plan.md  tool-versioning-testing.md
exploration/: inspect_a2a.py
scripts/: mcp_client.py
slides/: mcp-gateway-overview.html
tests/: test_agent_card.py  test_config_loader.py  test_json_detector.py  test_json_integration.py  test_markdown_list_parser.py  test_mcp_server.py  test_output_schema_jsonpath.py  test_output_transformer.py  test_proxy_server.py  test_registry_cli.py  test_registry_storage.py  test_sidecar_output_schema.py  test_sidecar_overrides.py  test_tool_versioning.py
(+18 files in other folders)
