[project]
name = "mcp-gateway-demo-ui"
version = "0.1.0"
description = "MCP Gateway Demo UI"
requires-python = ">=3.10"
dependencies = [
    "python-fasthtml>=0.6.0",
    "monsterui>=0.1.0",
    "httpx>=0.27.0",
    "sse-starlette>=1.6.0",
    "anthropic>=0.40.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
package = false
